--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,13 @@
     <title>SmartAgent</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-        <%= csrf_meta_tags %>
+
+		<%= stylesheet_link_tag "http://cdn.bootcss.com/jquery-tagsinput/1.3.3/jquery.tagsinput.css" %>
+		<%= javascript_include_tag "http://cdn.bootcss.com/jquery-tagsinput/1.3.3/jquery.tagsinput.js" %>
+		<%= javascript_include_tag "http://cdn.bootcss.com/jquery-tagsinput/1.3.3/jquery.tagsinput.min.js" %>
+
+
+    <%= csrf_meta_tags %>
   </head>
   <body>
 <%= render 'share/header' %>
