--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -15,6 +15,7 @@
 		  <li class="dropdown">
 		  	<a href="#" class="dropdown-toggle" data-toggle="dropdown">我<b class="caret"></b></a>
 			<ul class="dropdown-menu" role="menu" aria-labelledby="drop">
+        <li><a>ID: <%= current_user.id %></a><li>
 			  <li><%= link_to "开发者模式", pages_developer_path %></li>
 			  <li><%= link_to "退出", signout_path %>
 			</ul>
