change the start page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,10 +11,10 @@ padding-right: 17px;
 //设置header
 .navbar {
   background-color: #fff;
-
   .navbar-brand {
     width: 200px;
-    background-image: image-url("logo2.png");
+   	height: 60px;
+	 	background-image: image-url("newlogo.png");
     background-position: 0  50%;
     padding-left:0px;
     background-repeat:no-repeat;
