--- a/app/views/pages/start.html.erb
+++ b/app/views/pages/start.html.erb
@@ -4,6 +4,8 @@
     <div class="container">
       <h1>让世界,绕<span class="you">你</span>转动</h1>
       <h3>Let the WORLD go round for YOU!</h3>
+
+			<h3 style="color: red;position:absolute;left:800px;top:260px;">本项目受到国家863课题支持</h3>
     </div>
   </div>
   <div class="middle">
